--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 .header{
     height: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(beach.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(images/beach.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
